[workspace]
members = ["crates/*", "junction-python", "xtask"]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/junction-labs/junction-client"

[workspace.dependencies]
arc-swap = "1.7"
bytes = "1.6"
crossbeam-skiplist = "0.1"
enum-map = "2.7"
form_urlencoded = "1.1.1"
futures = "0.3"
k8s-openapi = { version = "0.21" }
kube = { version = "0.88" }
h2 = "0.3"
http = "1.1"
tokio = { version = "1.40", default-features = false }
tokio-stream = "0.1"
tonic = "0.11"
tonic-reflection = "0.11"
once_cell = "1.19"
petgraph = "0.6"
prost = "0.12"
rand = "0.8"
regex = "1.10.6"
schemars = "0.8.21"
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
serde_yml = "0.0.10"
smol_str = "0.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
xds-api = { version = "0.1", default-features = false }
xxhash-rust = { version = "0.8.12", features = ["xxh64"] }

junction-api = { version = "0.1.0", path = "crates/junction-api" }
junction-core = { version = "0.1.0", path = "crates/junction-core" }
junction-typeinfo = { version = "0.1.0", path = "crates/junction-typeinfo" }
junction-typeinfo-derive = { version = "0.1.0", path = "crates/junction-typeinfo-derive" }
