[workspace]
members = ["crates/*", "junction-node", "junction-python", "xtask"]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.2"
edition = "2021"
homepage = "https://junctionlabs.io"
repository = "https://github.com/junction-labs/junction-client"
license = "Apache-2.0"

# kube's msrv keeps climbing. we're picking this up through the transitive dep
# on `home`. once we drop the direct kube dependency, try downgrading.
rust-version = "1.81"

[workspace.dependencies]
arc-swap = "1.7"
bytes = "1.7"
crossbeam-skiplist = "0.1"
enum-map = "2.7"
form_urlencoded = "1.1.1"
futures = "0.3"
h2 = "0.4"
http = "1.1"
tokio = { version = "1.40", default-features = false }
tokio-stream = "0.1"
tonic = "0.12"
tonic-reflection = "0.12"
once_cell = "1.20"
petgraph = "0.6"
prost = "0.13"
rand = "0.8"
regex = "1.11.1"
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
serde_yml = "0.0.12"
smol_str = "0.3"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
xds-api = { version = "0.2", default-features = false}

xxhash-rust = { version = "0.8.15", features = ["xxh64"] }

junction-api = { version = "0.3.2", path = "crates/junction-api" }
junction-core = { version = "0.3.2", path = "crates/junction-core" }
junction-typeinfo = { version = "0.3.2", path = "crates/junction-typeinfo" }
junction-typeinfo-derive = { version = "0.3.2", path = "crates/junction-typeinfo-derive" }
