[package]
name = "junction-gateway-api"
version = "0.1.0"
edition = "2021"

[dependencies]
k8s-openapi = { workspace = true, features = ["v1_29"] }
kube = { workspace = true, features = ["runtime", "client", "derive"] }
http = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
xds-api = { workspace = true, default-features = false }
once_cell = { workspace = true }
