[package]
name = "junction-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "junction"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
http = { workspace = true }
junction-core = { workspace = true }
junction-api = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
xds-api = { workspace = true, features = ["pbjson"] }

pyo3 = { version = "0.21", features = ["abi3-py38", "serde"] }
pythonize = "0.21"

[build-dependencies]
pyo3-build-config = "0.21"
