[package]
name = "junction-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "junction"
crate-type = ["cdylib"]

[dependencies]
http = { workspace = true }
junction-core = { workspace = true }
junction-api = { workspace = true, features = ["kube_v1_29", "xds"] }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yml = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
xds-api = { workspace = true, features = ["pbjson"] }
pyo3 = { version = "0.21", features = [
    "extension-module",
    "abi3-py38",
    "serde",
] }
pythonize = "0.21"

[build-dependencies]
pyo3-build-config = "0.22"
