[package]
name = "junction-api-gen"
version.workspace = true
edition.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0"
askama = "0.12"
regex = { workspace = true }
once_cell = { workspace = true }
textwrap = { version = "0.16", features = ["smawk"] }


# TODO: this is necessary to build junction-api while the kube feature is a
# default feature. drop it once that stops being true.
k8s-openapi = { version = "0.23", features = ["v1_29"] }

junction-typeinfo = { workspace = true }
junction-api = { workspace = true, features = ["typeinfo"] }
