[package]
name = "junction-api-gen"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = """
cross-language API generation for Junction
""""

[dependencies]
anyhow = "1.0"
askama = "0.12"
regex = { workspace = true }
once_cell = { workspace = true }
textwrap = { version = "0.16", features = ["smawk"] }

junction-typeinfo = { workspace = true }
junction-api = { workspace = true, features = ["typeinfo"] }
