[package]
name = "junction-api-gen"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = """
cross-language API generation for Junction
"""

[dependencies]
anyhow = "1.0"
askama = "0.14"
regex = { workspace = true }
once_cell = { workspace = true }

junction-typeinfo = { workspace = true }
junction-api = { workspace = true, features = ["typeinfo"] }
