[package]
name = "junction-api"
version = "0.2.1"
edition = "2021"
description = """
The Junction API
"""
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories = ["api-bindings", "network-programming"]

[dependencies]
http = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }

# typeinfo
junction-typeinfo = { workspace = true, optional = true }

# xds
xds-api = { workspace = true, default-features = false, optional = true }

# kube
#
# k8s-openapi and the gateway-api crates have to be kept in sync, or we'll have
# a bad time with multiple versions of types and feature flags won't be set.
k8s-openapi = { version = "0.23", optional = true }
gateway-api = { version = "0.14.0", optional = true }
kube = { version = "0.96", optional = true }

[dev-dependencies]
serde_yml = "0.0.12"
arbtest = "0.3"
arbitrary = "1.3"
rand = "0.8"

[features]
default = []

# enable reflection. this is intended to only be used at build time to generate
# cross-language APIs.
typeinfo = ["dep:junction-typeinfo"]


# enable xds conversion for core types.
xds = ["dep:xds-api"]

# enable kube conversion for core types. this is a shorthand for the minimum
# available kube_v1_* feature.
kube = ["kube_v1_29"]

# each of these flags sets a MINIMUM version of the kubernetes API to be compatible
# with.
#
# because k8s-openapi does kube version selection with Cargo features, we're
# priced in to doing it as well. doing it this way means downstream crates don't
# have to ALSO depend on k8s-openapi and pick exactly the same version/feature
# flag combination.
kube_v1_29 = [
    "dep:kube",
    "dep:gateway-api",
    "dep:gateway-api",
    "k8s-openapi/v1_29",
]
kube_v1_30 = [
    "dep:kube",
    "dep:gateway-api",
    "dep:gateway-api",
    "k8s-openapi/v1_30",
]
kube_v1_31 = [
    "dep:kube",
    "dep:gateway-api",
    "dep:gateway-api",
    "k8s-openapi/v1_31",
]
