[package]
name = "junction-typeinfo-derive"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = """
TypeInfo derive macro
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
serde_derive_internals = "0.29.1"
syn = "2"
