[package]
name = "junction-typeinfo"
version = "0.2.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = """
reflection for junction API generation
"""

[dependencies]
junction-typeinfo-derive = { workspace = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
